--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>SwimMetrics</title>
+</head>
+<body>
+<h1>SwimMetrics </h1>
+  <p><h2>Where every stroke counts</h2></p>
+<hr></hr>
+<p><h3><a href="Times"> Meet Log</a></h3></p>
+  <p><h3><a href="Personal Bests">Personal Bests </a></h3></p>
 
+<a href="me">About Me</a>
+  <a href="Credits">Credits</a>
+</body>
+</html>
